--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body {
   bottom: -19px;
   height: 2px;
   width: 85px;
-  background-color: #E58D35;
+  background-color: #89C249;
   display: block;
 }
 .template-title.after-green::after, .after-green.template-title-left::after {
