--- a/style.css
+++ b/style.css
@@ -50,12 +50,13 @@ body {
   background-color: #89C249;
 }
 .btn.btn-large {
-  min-width: 293px;
+  min-width: 248px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 22px 22px 22px 33px;
   font-size: 16px;
+  max-height:68px;
 }
 .btn.btn-secondary {
   color: white;
